// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination render simple 1`] = `
<div
  className="css-k008qs"
>
  <div>
    <button
      className="css-dn2100"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="css-1hsbuls"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
  </div>
  <div>
    <button
      className="css-yscwdw"
      onClick={[Function]}
      type="button"
    >
      1
    </button>
    <button
      className="css-yscwdw"
      onClick={[Function]}
      type="button"
    >
      2
    </button>
    <button
      className="css-1u7s8st"
      onClick={[Function]}
      type="button"
    >
      3
    </button>
    <button
      className="css-yscwdw"
      onClick={[Function]}
      type="button"
    >
      4
    </button>
    <button
      className="css-yscwdw"
      onClick={[Function]}
      type="button"
    >
      5
    </button>
    <svg
      className="css-1uk0cf4"
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#more"
      />
    </svg>
    <button
      className="css-yscwdw"
      onClick={[Function]}
      type="button"
    >
      30
    </button>
  </div>
  <div>
    <button
      className="css-dn2100"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="css-oiyldh"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Pagination renders with page size changer 1`] = `
<div
  className="css-k008qs"
>
  <div>
    <button
      className="css-dn2100"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="css-1hsbuls"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
  </div>
  <div>
    <button
      className="css-yscwdw"
      onClick={[Function]}
      type="button"
    >
      1
    </button>
    <button
      className="css-yscwdw"
      onClick={[Function]}
      type="button"
    >
      2
    </button>
    <button
      className="css-1u7s8st"
      onClick={[Function]}
      type="button"
    >
      3
    </button>
    <button
      className="css-yscwdw"
      onClick={[Function]}
      type="button"
    >
      4
    </button>
    <button
      className="css-yscwdw"
      onClick={[Function]}
      type="button"
    >
      5
    </button>
    <svg
      className="css-1uk0cf4"
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#more"
      />
    </svg>
    <button
      className="css-yscwdw"
      onClick={[Function]}
      type="button"
    >
      30
    </button>
  </div>
  <div>
    <button
      className="css-dn2100"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="css-oiyldh"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
  </div>
  <div
    className="css-1vkrryt"
    onClick={[Function]}
  >
    <button
      className="css-xhnfgx"
      type="button"
    >
      10 / page 
      <svg
        className="css-ok8b0z"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Pagination renders with page size changer and total 1`] = `
<div
  className="css-k008qs"
>
  <div
    className="css-lf2s8g"
  >
    21
    -
    30
     of 
    300
     items
  </div>
  <div>
    <button
      className="css-dn2100"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="css-1hsbuls"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
  </div>
  <div>
    <button
      className="css-yscwdw"
      onClick={[Function]}
      type="button"
    >
      1
    </button>
    <button
      className="css-yscwdw"
      onClick={[Function]}
      type="button"
    >
      2
    </button>
    <button
      className="css-1u7s8st"
      onClick={[Function]}
      type="button"
    >
      3
    </button>
    <button
      className="css-yscwdw"
      onClick={[Function]}
      type="button"
    >
      4
    </button>
    <button
      className="css-yscwdw"
      onClick={[Function]}
      type="button"
    >
      5
    </button>
    <svg
      className="css-1uk0cf4"
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#more"
      />
    </svg>
    <button
      className="css-yscwdw"
      onClick={[Function]}
      type="button"
    >
      30
    </button>
  </div>
  <div>
    <button
      className="css-dn2100"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="css-oiyldh"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
  </div>
  <div
    className="css-1vkrryt"
    onClick={[Function]}
  >
    <button
      className="css-xhnfgx"
      type="button"
    >
      10 / page 
      <svg
        className="css-ok8b0z"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Pagination renders with total 1`] = `
<div
  className="css-k008qs"
>
  <div
    className="css-lf2s8g"
  >
    21
    -
    30
     of 
    300
     items
  </div>
  <div>
    <button
      className="css-dn2100"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="css-1hsbuls"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
  </div>
  <div>
    <button
      className="css-yscwdw"
      onClick={[Function]}
      type="button"
    >
      1
    </button>
    <button
      className="css-yscwdw"
      onClick={[Function]}
      type="button"
    >
      2
    </button>
    <button
      className="css-1u7s8st"
      onClick={[Function]}
      type="button"
    >
      3
    </button>
    <button
      className="css-yscwdw"
      onClick={[Function]}
      type="button"
    >
      4
    </button>
    <button
      className="css-yscwdw"
      onClick={[Function]}
      type="button"
    >
      5
    </button>
    <svg
      className="css-1uk0cf4"
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#more"
      />
    </svg>
    <button
      className="css-yscwdw"
      onClick={[Function]}
      type="button"
    >
      30
    </button>
  </div>
  <div>
    <button
      className="css-dn2100"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="css-oiyldh"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
  </div>
</div>
`;
